reworked to make the it more responsive

--- a/index.html
+++ b/index.html
@@ -14,22 +14,22 @@
   </head>
   <body>
     <main>
-      <div class="side-logo">
-        <div class="side-logo__logo-section">
+      <div class="side-image">
+        <div class="side-image__logo-section">
           <img
-            class="side-logo__logo-section__logo"
+            class="side-image__logo-section__logo"
             src="/assets/images/odin-lined.png"
-            alt="Odin Lined Logo"
+            alt="Odin lined logo"
           />
-          <div class="side-logo__logo-section__text">ODIN</div>
+          <div class="side-image__logo-section__text">ODIN</div>
         </div>
         <img
-          class="side-logo__background"
+          class="side-image__bg"
           src="/assets/images/halie-west-25xggax4bSA-unsplash.jpg"
-          alt="Odin Logo on Leaf Background"
+          alt="Leaf background."
         />
       </div>
-      <div class="main-content"></div>
+      <div class="content"></div>
     </main>
   </body>
 </html>
